--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "bluebird": "3.5.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-prettify": "0.0.10",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "lodash": "4.17.10",
     "moment": "2.22.1",
     "mongoose": "5.0.17",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "uuid": "3.2.1"
   }
 }
